--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,15 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.29",
+    "nodemailer": "^7.0.2",
     "prisma": "^6.7.0"
   },
   "devDependencies": {
