--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
   "semi": true,
   "singleQuote": false,
   "quoteProps": "preserve",
-  "jsxSingleQuote": true,
+  "jsxSingleQuote": false,
   "trailingComma": "all",
   "bracketSpacing": true,
   "bracketSameLine": true,
