--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
   "author": "Muhammad Rizwan",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^6.7.0",
+    "@prisma/client": "^6.8.2",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -23,10 +23,10 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mailgen": "^2.0.29",
-    "nodemailer": "^7.0.2",
-    "prisma": "^6.7.0"
+    "nodemailer": "^7.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prisma": "^6.8.2"
   }
 }
