--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-menubar": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.6",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-toast": "^1.2.13",
     "axios": "^1.9.0",
