--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,9 @@
     "@radix-ui/react-menubar": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.6",
     "@radix-ui/react-select": "^2.2.4",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.13",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
