--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "leetlab-frontend",
+  "name": "leetfire-frontend",
   "private": true,
   "version": "1.0.0",
-  "description": "A product inspired by leet code",
+  "description": "A product inspired by leetcode",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -19,6 +19,7 @@
     "@radix-ui/react-progress": "^1.1.6",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.13",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
